tests/ui/binding/method-call-nonsensical-pattern-binding-7092.stderr
error[E0308]: mismatched types
  --> $DIR/method-call-nonsensical-pattern-binding-7092.rs:7:9
   |
LL |     match x {
   |           - this expression has type `Whatever`
LL |         Some(field) =>
   |         ^^^^^^^^^^^ expected `Whatever`, found `Option<_>`
   |
   = note: expected enum `Whatever`
              found enum `Option<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
